bookinfo-amw/deploy-ratings-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      serviceAccountName: default
      containers:
      - name: ratings
        image: examples-bookinfo-ratings-v1:amw
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
