bookinfo-amw/deploy-reviews-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
  labels:
    app: reviews-v1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v1
      version: v1
  template:
    metadata:
      labels:
        app: reviews-v1
        version: v1
    spec:
      serviceAccountName: default
      containers:
      - name: reviews
        image: examples-bookinfo-reviews-v1:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
