bookinfo-amw/deploy-reviews-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
  labels:
    app: reviews-v2
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v2
      version: v2
  template:
    metadata:
      labels:
        app: reviews-v2
        version: v2
    spec:
      serviceAccountName: default
      containers:
      - name: reviews
        image: examples-bookinfo-reviews-v2:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
