bookinfo-amw/deploy-reviews-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  labels:
    app: reviews-v3
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v3
      version: v3
  template:
    metadata:
      labels:
        app: reviews-v3
        version: v3
    spec:
      serviceAccountName: default
      containers:
      - name: reviews
        image: image-registry.openshift-image-registry.svc:5000/default/examples-bookinfo-reviews-v3:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
